--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,26 @@
 aniso8601==6.0.0
+cairocffi==1.0.2
+CairoSVG==2.3.1
+cffi==1.12.3
 Click==7.0
+cssselect2==0.2.1
+defusedxml==0.6.0
 Flask==1.0.2
+Flask-Cors==3.0.7
 Flask-RESTful==0.3.7
+html5lib==1.0.1
 itsdangerous==1.1.0
 Jinja2==2.10
 MarkupSafe==1.1.1
+pdfkit==0.6.1
+Pillow==6.0.0
+psycopg2-binary==2.8.1
+pycparser==2.19
+PyJWT==1.7.1
+Pyphen==0.9.5
 pytz==2018.9
 six==1.12.0
+tinycss2==1.0.2
+WeasyPrint==47
+webencodings==0.5.1
 Werkzeug==0.14.1
