--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 aniso8601==6.0.0
 cairocffi==1.0.2
+CairoSVG==2.3.1
 cffi==1.12.3
 Click==7.0
 cssselect2==0.2.1
@@ -22,3 +23,4 @@ six==1.12.0
 tinycss2==1.0.2
 WeasyPrint==47
 webencodings==0.5.1
+Werkzeug==0.14.1
