--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,38 @@
 aniso8601==6.0.0
+awscli==1.16.147
+botocore==1.12.137
 cairocffi==1.0.2
 CairoSVG==2.3.1
 cffi==1.12.3
 Click==7.0
+colorama==0.3.9
 cssselect2==0.2.1
 defusedxml==0.6.0
+docutils==0.14
 Flask==1.0.2
 Flask-Cors==3.0.7
 Flask-RESTful==0.3.7
 html5lib==1.0.1
 itsdangerous==1.1.0
 Jinja2==2.10
+jmespath==0.9.4
 MarkupSafe==1.1.1
 pdfkit==0.6.1
 Pillow==6.0.0
 psycopg2-binary==2.8.1
+pyasn1==0.4.5
 pycparser==2.19
 PyJWT==1.7.1
 Pyphen==0.9.5
+python-dateutil==2.8.0
 pytz==2018.9
+PyYAML==3.13
+rsa==3.4.2
+s3transfer==0.2.0
+setuptools-scm==1.15.7
 six==1.12.0
 tinycss2==1.0.2
+urllib3==1.24.2
 WeasyPrint==47
 webencodings==0.5.1
 Werkzeug==0.14.1
